--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -28,6 +28,7 @@
         </ul>
 
     </div>
+    <div *ngIf='meetArray.length===0' style="text-align: center;"><h2><strong> No Pending Meeting Found</strong></h2></div>
 
     <!-- <h2>COMPLETED TASKS</h2>
     <div *ngFor="let task of meetArray">
